// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BloodPool > a pool that grew past 20 counts as big 1`] = `
"1.20 initial BloodPool ichor=blood r=10 optional @(660,410)
1.55 cue squelch
1.55 rate GOOD "Drained" +63 combo=1
"
`;

exports[`BloodPool > a pool that started below r 20 drains without a rating 1`] = `
"1.20 initial BloodPool ichor=blood r=15 optional @(660,410)
1.37 cue squelch
2.22 -- after leech: status=running vitals=99 score=0 combo=0 counts=0/0/0/0 live=[]
"
`;

exports[`BloodPool > the leech drains blackbile and rates GOOD "Drained" for a pool that started at r ≥ 20 1`] = `
"1.20 initial BloodPool ichor=blackbile r=30 optional @(660,410)
1.65 cue squelch
1.65 rate GOOD "Drained" +63 combo=1
2.22 -- after leech: status=running vitals=99 score=63 combo=1 counts=0/1/0/0 live=[] stains=0
"
`;

exports[`BloodPool > the leech drains blood and rates GOOD "Drained" for a pool that started at r ≥ 20 1`] = `
"1.20 initial BloodPool ichor=blood r=30 optional @(660,410)
1.65 cue squelch
1.65 rate GOOD "Drained" +63 combo=1
2.22 -- after leech: status=running vitals=98.9 score=63 combo=1 counts=0/1/0/0 live=[] stains=1
"
`;

exports[`BloodPool > the leech drains pus and rates GOOD "Drained" for a pool that started at r ≥ 20 1`] = `
"1.20 initial BloodPool ichor=pus r=30 optional @(660,410)
1.65 cue squelch
1.65 rate GOOD "Drained" +63 combo=1
2.22 -- after leech: status=running vitals=99 score=63 combo=1 counts=0/1/0/0 live=[] stains=0
"
`;

exports[`Laceration > a one-stroke stitch rates COOL "Stitched" and leaves a scar 1`] = `
"1.20 initial Laceration length=120 bleed=0 @(660,410)
1.28 cue stitch
1.43 cue stitch
1.58 cue stitch
1.73 cue stitch
1.88 cue stitch
1.88 rate COOL "Stitched" +105 combo=1
2.73 -- after stitching: status=running vitals=99 score=105 combo=1 counts=1/0/0/0 live=[]
"
`;

exports[`Laceration > a two-stroke stitch rates GOOD "Stitched" 1`] = `
"1.20 initial Laceration length=120 bleed=0 @(660,410)
1.27 cue stitch
1.40 cue stitch
1.53 cue stitch
1.70 cue stitch
1.85 cue stitch
1.85 rate GOOD "Stitched" +63 combo=1
2.60 -- after two strokes: status=running vitals=99 score=63 combo=1 counts=0/1/0/0 live=[]
"
`;

exports[`Laceration > bleeding feeds a pool at the wound over time 1`] = `
"1.20 initial Laceration length=100 bleed=1 @(660,410)
2.50 spawn BloodPool ichor=blood r=8 optional @(660,408)
11.20 -- after 10 s: status=running vitals=90 score=0 combo=0 counts=0/0/0/0 live=[Laceration,BloodPool] pools=1 r=[70]
"
`;

exports[`Laceration > nicks up to SALVE_MAX (46) are sealed by salve: GOOD "Sealed" 1`] = `
"1.20 initial Laceration length=46 bleed=0 @(660,410)
1.20 initial Laceration length=47 bleed=0 @(460,410)
1.42 rate GOOD "Sealed" +63 combo=1
2.00 -- after salving both: status=running vitals=99 score=63 combo=1 counts=0/1/0/0 live=[Laceration]
"
`;

exports[`Laceration > op2-1 claw rakes: three parallel lacerations, each stitched in one stroke 1`] = `
"1.20 initial Laceration length=86 bleed=0.8 @(758,407)
1.20 initial Laceration length=100 bleed=0.8 @(770,430)
1.20 initial Laceration length=86 bleed=0.8 @(782,453)
1.28 cue stitch
1.43 cue stitch
1.58 cue stitch
1.63 spawn BloodPool ichor=blood r=8 optional @(783,451)
1.73 cue stitch
1.73 rate COOL "Stitched" +105 combo=1
2.40 cue stitch
2.65 cue squelch
2.98 spawn BloodPool ichor=blood r=8 optional @(778,456)
3.03 cue squelch
3.53 cue stitch
3.68 cue stitch
3.75 cue stitch
3.83 cue stitch
3.98 cue stitch
3.98 rate GOOD "Stitched" +66 combo=2
4.13 spawn BloodPool ichor=blood r=8 optional @(782,455)
4.35 cue stitch
5.37 cue squelch
5.37 rate GOOD "Drained" +69 combo=3
5.67 spawn BloodPool ichor=blood r=8 optional @(784,452)
5.72 cue squelch
6.38 cue stitch
6.53 cue stitch
6.53 rate GOOD "Stitched" +72 combo=4
7.23 -- after the rakes: status=running vitals=94 score=312 combo=4 counts=1/3/0/0 live=[]
"
`;

exports[`Laceration > stitching while flooded says "flooded" and makes no progress 1`] = `
"1.20 initial Laceration length=100 bleed=0 @(660,410)
1.20 initial BloodPool ichor=blood r=45 optional @(660,410)
1.20 flag flooded
1.20 say "Too much blood — draw it off with the leech-pipe before you stitch!"
2.73 -- after stitching into the pool: status=running vitals=98.7 score=0 combo=0 counts=0/0/0/0 live=[Laceration,BloodPool] count=0
"
`;
